Update ProductsController.java