@@ -6,6 +6,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/products_data")
@@ -30,9 +31,8 @@ public class ProductsController {
         return (List<Product>) productsRepository.findAllById(
                 userCartItems.stream()
                         .map(UserCart::getProductId)
-                        .toList()
+                        .collect(Collectors.toList())
         );
     }
+
 }
-
-
